fixed text display issues/alignment

--- a/style/style.css
+++ b/style/style.css
@@ -111,6 +111,7 @@ body{
     top: 40%;
     width: 100%;
     line-height: 0.4em;
+    border: 1px;
 }
 
 .main-buttons{
@@ -153,11 +154,44 @@ body{
 }
 
 /* ================ ABOUT ME SECTION ============== */
-#about{
-    vertical-align: top;
+#about_me_section{
+    color: white;
+    position:absolute;
+    text-align:left;
+    top: 20%;
+    width: 100%;
+    line-height: 0.4em;
+    border: 1px;
 }
 
 #about_me_head{
     color: white;
     font-size: 32px;
 }
+
+#about_me_text{
+    color: white;
+    font-size: 20px;
+}
+
+/* ================ EXPERIENCE SECTION ============== */
+#experience_section{
+    color: white;
+    position:absolute;
+    text-align:right;
+    top: 20%;
+    width: 100%;
+    line-height: 0.4em;
+    border: 1px;
+}
+
+#experience_head{
+    color: white;
+    font-size: 32px;
+}
+
+#experience_text{
+    color: white;
+    font-size: 20px;
+}
+
